--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "swiper": "^11.1.12",
+    "victory": "^37.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
