--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-router-dom": "^6.26.2",
     "react-scripts": "5.0.1",
     "react-speech-recognition": "^3.10.0",
+    "recharts": "^2.13.2",
     "sweetalert2": "^11.14.4",
     "swiper": "^11.1.12",
     "web-vitals": "^2.1.4"
