fix: usage .env

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BASE_URL_ATHENA="https://athena-backend-api.onrender.com"
-BASE_URL_ASSISTHENA="https://assisthena.onrender.com"
+REACT_APP_BASE_URL_ATHENA="https://athena-backend-api.onrender.com"
+REACT_APP_BASE_URL_ASSISTHENA="https://assisthena.onrender.com"
